--- a/app/next/package.json
+++ b/app/next/package.json
@@ -12,11 +12,10 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "swiper": "^10.3.1"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "@types/node": "20.8.4",
+    "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
