--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 NEXT_URL=http://localhost:9999
-NEXT_COMMAND=yarn && yarn build && yarn start
+NEXT_COMMAND=yarn && yarn dev
 NEXT_PORT=9999:9999
